# jwt-actix-web-demo

./: .env  .env.production  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
extras/: gen_secrets.py  thunder-collection_UserAuth.json
sql/: queries.sql  up.sql
src/: config.rs  db.rs  errors.rs  main.rs  resp.rs  server.rs
src/auth/: tokens.rs
src/db/: prelude.rs  redis.rs  user.rs
src/middlewares/: auth.rs
src/models/: user.rs
src/routes/: auth.rs  home.rs
src/utils/: logger.rs
