[package]
name = "userauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
jsonwebtoken = "8.3.0"
redis = { version = "0.23.0", features = ["tokio-comp"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
slog = "2.7.0"
slog-async = "2.7.0"
slog-json = "2.6.1"
slog-term = "2.9.0"
sqlx = { version = "0.7.0", features = ["runtime-tokio", "postgres", "uuid"] }
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
uuid = { version = "1.4.0", features = ["v4", "serde"] }
